feat: student info
